# rimvydas-zilinskas-SDK

./: README.md  design.md  setup.cfg
lotr_api/: api.py  exceptions.py  response.py  utils.py
