[metadata]
name = rimvydas-zilinskas-lotr-api
description = Lord Of The Rings API
version = 0.1.0
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Rimvydas Zilinskas
author_email = rimvydas@meilirobots.com
url = https://github.com/rimvydaszilinskas/rimvydas-zilinskas-lotr-api

[options]
install_requires =
    requests==2.28.1
